# TRAVAS-AI

./: .env.example  .gitignore  API_DOCUMENTATION.md  ATITHI_GUIDE.md  DEVELOPMENT.md  FRONTEND_SETUP.md  HUMAN_FEEDBACK_LOOP.md  PARIKSHAK_REVIEWER_GUIDE.md  README.md  REPOSITORY_EXPLAINED.md  SANCHALAK_GUIDE.md  STREAMLIT_QUICKSTART.md  TESTING_SUCCESS.md  TEST_SCENARIOS.md  WORKFLOW_GUIDE.md  WORKING_DEMO_SETUP.md  YOJANA_SYSTEM_PROMPT_GOLD.md  demo_annapurna_shared_state.py  demo_atithi.py  demo_atithi_shared_state.py  demo_atithi_with_state.py  demo_bazaar_shared_state.py  demo_complete_end_to_end.py  demo_human_feedback_loop.py  demo_parikshak_validation.py  demo_sanchalak.py  demo_sanchalak_shared_state.py  demo_yatra_shared_state.py  demo_yojana_shared_state.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_test.py  streamlit_app.py  streamlit_requirements.txt
.streamlit/: .gitseek  config.toml
TRAVAS-AI/: atithi_agent_prompt.py  requirements.txt  setup.py
TRAVAS-AI/agents/: __init__.py  atithi_agent.py  base_agent.py
TRAVAS-AI/config/: prompts.py  settings.py
TRAVAS-AI/llm/: __init__.py  client.py
TRAVAS-AI/models/: guest.py  preferences.py
TRAVAS-AI/utils/: __init__.py  validators.py
agents/: agent_with_shared_state_example.py  annapurna_agent.py  atithi_agent.py  atithi_state.py  atithi_with_state.py  base_agent.py  bazaar_agent.py  feedback_handler.py  parikshak_agent.py  registry.py  safar_agent.py  sanchalak_agent.py  shared_state.py  yatra_agent.py  yojana_agent.py
api/: package-lock.json  package.json  server.js
config/: __init__.py
data/: __init__.py  live_flights.py  live_places.py  live_rag.py  mock_attractions.py  mock_hotels.py  mock_restaurants.py  mock_shops.py  mock_transport.py  rag_index.py
frontend/: index.html  server.js
models/: __init__.py  attraction.py  hotel.py  itinerary.py  preferences.py  restaurant.py  shopping.py  transport.py
python_backend/: api.py  requirements.txt
tests/: test_state_logic.py
tools/: __init__.py  attraction_tools.py  hotel_tools.py  planning_tools.py  rag_helpers.py  restaurant_tools.py  shopping_tools.py  transport_tools.py  validation_tools.py
utils/: logger.py  validators.py
